# blackhole-simulator

./: .gitignore  CMakeLists.txt  README.md  main.py  requirements.txt
python_implementation/physics/: black_hole.py
python_implementation/rendering/: renderer.py
python_implementation/shaders/: accretion_disk.frag  blackhole.frag  blackhole.vert  starfield.frag
python_implementation/utils/: camera.py
shaders/: BlackHolePS.hlsl  BlackHoleVS.hlsl
src/: main.cpp
src/physics/: BlackHole.cpp  BlackHole.h
src/rendering/: Camera.cpp  Camera.h  DirectXApp.cpp  DirectXApp.h  Renderer.cpp  Renderer.h
